2009-04-21  Francois Suter  <francois@typo3.org>

	* Follow up to #10320 (again): t3lib_extMgm::addStaticFile() call did not reflect changes in location of static templates in css_styled_content (from 2009-04-20)

2009-04-21  Ingo Renner  <ingo@typo3.org>

	* Changed icons in t3skin for new file, file upload
	* Fixed icon in t3skin for refresh

2009-04-20  Francois Suter  <francois@typo3.org>

	* Follow up to #10320: Move current version of static files of css_styled_content from static/current/*.txt back to static/*.txt

2009-04-20  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10759: RemoveXSS is incompatible with PHP >= 5.2.8

2009-04-19  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10919: Hide View-icon in listview with doktypes 254 and 255

2009-04-17  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10827: Hide "Save and View"-button when editing a content-element

2009-04-17  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #2178: template::getTabMenu doubles ampersands (thanks to Stefano Kowalke)

2009-04-16  Oliver Hader  <oliver@typo3.org>

	* Added feature #10725: Integrate possibility to determine maximum of multiple values in GIFBUILDER

2009-04-16  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10735: Wrong returnUrl with clipboard actions

2009-04-15  Tobias Liebig <mail_typo3@etobi.de>

	* Fixed issue #8103: t3editor / typoscript on the right side of an operator is not tokenized (needed to enable codecompletion behind copy or reference operator)
	* Fixed issue #9051: t3editor / On Mac Os X the key combination CMD+LEFT will close the t3editor
	* Fixed issue #10899: bugfixes for t3editor codecompletion (credits to Stephan Petzl and Christian Kartnig)

2009-04-10  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #10866: extra extJS onready code not loaded with template.php
	* Fixed bug #10867: extJS localization doesn't work
	* Fixed bug #9076: iso-ir-109 detected as iso-8859-2 instead of iso-8859-3